// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityDimensionDetails renders component 1`] = `
<li
  className="container"
  style={
    {
      "background": "rgba(0,0,0,0.1)",
      "borderTop": "5px solid #000000",
      "listStyle": "none",
    }
  }
>
  <div
    className="side"
  >
    <p
      className="icon"
    >
      <img
        alt="Agreeableness Detail Header"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </p>
  </div>
  <div
    className="content"
  >
    <h2>
      Agreeableness
       
      <span
        style={
          {
            "color": "#000000",
          }
        }
      >
        |
      </span>
       
      Medium
    </h2>
    <h3>
      Detail Header
    </h3>
    <p
      className="description"
    >
      You describe yourself as someone who has a mature and streetwise view of other people and their views. Your first instinct is likely to be to trust other people, but you do know that others can let you down. Thus, you are probably able to be direct, but are also able to temper your approach with sensitivity for what will keep relationships healthy and intact.
    </p>
  </div>
  <div
    className="detailsListContainer"
  >
    <h3>
      Detail Header
    </h3>
    <ul
      className="detailsList"
    >
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Forgiving style
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Looks for win-win outcome
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Negotiates with sensitivity
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Realistic view of others
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Recognises imperfection 
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Relational style
      </li>
    </ul>
  </div>
  <div
    className="detailsListContainer"
  >
    <h3>
      Detail Header
    </h3>
    <ul
      className="detailsList"
    >
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May appear too open-minded (to others)
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May be viewed as a ‘pushover’ by others’
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May let sympathy get in the way
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May lose out to very assertive colleagues
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May not always be objective enough
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May not go for the optimal personal win
      </li>
    </ul>
  </div>
</li>
`;

exports[`PersonalityDimensionDetails renders component in third person 1`] = `
<li
  className="container"
  style={
    {
      "background": "rgba(0,0,0,0.1)",
      "borderTop": "5px solid #000000",
      "listStyle": "none",
    }
  }
>
  <div
    className="side"
  >
    <p
      className="icon"
    >
      <img
        alt="Agreeableness Detail Header"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </p>
  </div>
  <div
    className="content"
  >
    <h2>
      Agreeableness
       
      <span
        style={
          {
            "color": "#000000",
          }
        }
      >
        |
      </span>
       
      Medium
    </h2>
    <p
      className="description"
    >
      The candidate’s view is that they are someone who has a mature and streetwise view of other people and their views. Their first instinct is likely to be to trust other people, but they do know that others can let them down. Thus, they are probably able to be direct, but are also able to temper their approach with sensitivity for what will keep relationships healthy and intact.
    </p>
  </div>
  <div
    className="detailsListContainer"
  >
    <h3>
      Detail Header
    </h3>
    <ul
      className="detailsList"
    >
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Forgiving style
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Looks for win-win outcome
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Negotiates with sensitivity
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Realistic view of others
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Recognises imperfection 
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Relational style
      </li>
    </ul>
  </div>
  <div
    className="detailsListContainer"
  >
    <h3>
      Detail Header
    </h3>
    <ul
      className="detailsList"
    >
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May appear too open-minded (to others)
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May be viewed as a ‘pushover’ by others’
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May let sympathy get in the way
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May lose out to very assertive colleagues
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May not always be objective enough
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        May not go for the optimal personal win
      </li>
    </ul>
  </div>
</li>
`;

exports[`PersonalityDimensionDetails renders component without pitfalls 1`] = `
<li
  className="container"
  style={
    {
      "background": "rgba(0,0,0,0.1)",
      "borderTop": "5px solid #000000",
      "listStyle": "none",
    }
  }
>
  <div
    className="side"
  >
    <p
      className="icon"
    >
      <img
        alt="Agreeableness Detail Header"
        src="https://cdn.traitify.com/icons/big-five/dimensions/black/agreeableness.png"
      />
    </p>
  </div>
  <div
    className="content"
  >
    <h2>
      Agreeableness
       
      <span
        style={
          {
            "color": "#000000",
          }
        }
      >
        |
      </span>
       
      Medium
    </h2>
    <h3>
      Detail Header
    </h3>
    <p
      className="description"
    >
      You describe yourself as someone who has a mature and streetwise view of other people and their views. Your first instinct is likely to be to trust other people, but you do know that others can let you down. Thus, you are probably able to be direct, but are also able to temper your approach with sensitivity for what will keep relationships healthy and intact.
    </p>
  </div>
  <div
    className="detailsListContainer"
  >
    <h3>
      Detail Header
    </h3>
    <ul
      className="detailsList"
    >
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Forgiving style
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Looks for win-win outcome
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Negotiates with sensitivity
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Realistic view of others
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Recognises imperfection 
      </li>
      <li
        style={
          {
            "background": "rgba(0,0,0,0.5)",
          }
        }
      >
        Relational style
      </li>
    </ul>
  </div>
</li>
`;
